--- a/app/src/main/res/layout/content_crear_categoria_med.xml
+++ b/app/src/main/res/layout/content_crear_categoria_med.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:padding="5dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.salud.CrearCategoriaMed"
     tools:showIn="@layout/activity_crear_categoria_med">
@@ -15,11 +16,11 @@
         android:text="@string/txt_nom" />
 
     <EditText
-        android:id="@+id/etCategNombre"
+        android:id="@+id/etCategMedNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/med_hint_categoria"
         android:importantForAutofill="no"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName|textCapWords" />
 </LinearLayout>
