--- a/app/src/main/res/layout/layout_categoria_actividad.xml
+++ b/app/src/main/res/layout/layout_categoria_actividad.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+<RadioButton xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/categoriaActividad"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <RadioButton
-        android:id="@+id/categActividad"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_dark"
-        android:buttonTint="@android:color/black" />
-</RadioGroup>
+    android:background="@android:color/holo_blue_dark"
+    android:buttonTint="@android:color/black" />
