--- a/app/src/main/res/layout/layout_nota.xml
+++ b/app/src/main/res/layout/layout_nota.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:baselineAligned="false"
@@ -11,12 +11,14 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:contentDescription="@string/nota_img_imagen"
-        app:srcCompat="@drawable/ee06_crying" />
+        tools:srcCompat="@drawable/ee06_crying" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingStart="10dp"
+        android:paddingEnd="5dp">
 
         <TextView
             android:id="@+id/notaTitulo"
@@ -46,8 +48,10 @@
 
             <TextView
                 android:id="@+id/notaFecha"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:layout_marginEnd="2dp"
                 android:text="@string/nota_txt_ejem_fecha"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
@@ -107,7 +111,7 @@
                 android:layout_marginStart="2dp"
                 android:layout_marginEnd="2dp"
                 android:contentDescription="@string/nota_btn_edoemo"
-                app:srcCompat="@drawable/ee07_dead" />
+                tools:srcCompat="@drawable/ee07_dead" />
 
             <View
                 android:layout_width="1dp"
